--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -38,6 +38,7 @@
       <p class="page__meta"><i class="fa fa-clock" aria-hidden="true"></i> {% include read-time.html %}</p>
     {% endif %}
         {% if post.collection == 'teaching' %}
+          {% assign year = post.date | date: "%Y" %}
           {% assign month = post.date | date: "%-m" %}
           {% if month == '1' or month == '2' %}
             {% assign semester = 'Spring' %}
